--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
     <title>Conversion</title>
   </head>
   <body>
