--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Hello, World</title>
-  </head>
-
-  <body>
-    <h1>Hello, World</h1>
-  </body>
-</html>
-
+Hello, World
